--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.12",
-    "path-browserify": "^1.0.1",
     "pinia": "^2.0.18",
     "sass": "^1.54.3",
     "socket.io-client": "^2.5.0",
     "vue": "^3.2.37",
+    "vue-echarts": "^6.2.3",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
